--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-encoding/<project>=UTF-8
+encoding//src/main/java/com/pikapedia/db/DBManager.java=UTF-8
 separateDerivedEncodings=true
