--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src/main/java"/>
+	<!-- <classpathentry kind="src" path="src/main/java"/> -->
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
@@ -39,6 +39,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
-	<classpathentry kind="lib" path="C:/Users/79677/Downloads/ojdbc11.jar"/>
+	<classpathentry kind="lib" path="C:/jsw_sbt7/tomcat/lib/ojdbc11-21.5.0.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
