--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
         </excludes>
       </resource>
     </resources>
+    <pluginManagement>
+ 
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -55,5 +57,6 @@
         <version>3.2.3</version>
       </plugin>
     </plugins>
+       </pluginManagement>
   </build>
 </project>
